# carlo-gavazzi-em540-bridge

./: .flake8  .gitignore  AGENTS.md  CHANGELOG.md  Config.py  Dockerfile  Em540Data.py  Em540_master.py  Em540_slave.py  Em540_slave_bridge.py  FroniusSmartMeterEmulator.py  Makefile  MeterData.py  MqttComms.py  PduHelper.py  README.md  TS65A_slave_bridge.py  config-default.yaml  config.py  docker-compose.yaml  em540_client.py  em540_data.py  em540_master.py  em540_slave.py  em540_slave_bridge.py  em540_slave_stats.py  ha_bridge.py  ha_diagnostics.py  ha_sensors.py  main.py  main_test.py  mapper.py  meter_data.py  pdu_helper.py  profile_server.py  pyproject.toml  requirements-dev.txt  requirements.txt  test_ts65a_data.py  test_ts65a_slave_stats.py  (+4 more)
.github/: dependabot.yml
.github/workflows/: build.yml  ci.yml  release.yml
app/: __main__.py  config.py  main.py  version.py
app/carlo_gavazzi/: em540_data.py  em540_master.py  em540_slave_bridge.py  (+2 more)
carlo_gavazzi/: em540_data.py  em540_data_test.py  em540_master.py  em540_master_test.py  em540_slave_bridge.py  em540_slave_bridge_test.py  em540_slave_stats_test.py  meter_data.py  meter_data_test.py
carlo_gravazzi/: em540_data.py  em540_master.py  em540_slave_bridge.py  meter_data.py
fronius/: test_ts65a_data.py  test_ts65a_slave_stats.py  ts65a_data.py  ts65a_data_test.py  ts65a_slave_bridge.py  ts65a_slave_stats.py  ts65a_slave_stats_test.py
home_assistant/: ha_bridge.py  ha_bridge_test.py  ha_diagnostics.py  ha_sensors.py
tests/: config_test.py  main_test.py  version_test.py
utils/: pdu_helper.py
(+42 files in other folders)
